--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "core-js": "2.5.4",
     "hammerjs": "2.0.8",
     "ngx-highlightjs": "^2.1.1",
-    "rxjs": "6.0.0",
+    "rxjs": "^6.2.0",
+    "rxjs-compat": "^6.2.0",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
