--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@ngrx/effects": "6.0.1",
     "@ngrx/store": "6.0.1",
     "@ngrx/store-devtools": "6.0.1",
+    "angularfire2": "^5.0.0-rc.10",
     "core-js": "2.5.4",
+    "firebase": "^5.0.4",
     "hammerjs": "2.0.8",
     "ngx-highlightjs": "^2.1.1",
     "rxjs": "^6.2.0",
