--- a/package.json
+++ b/package.json
@@ -30,19 +30,20 @@
     "core-js": "2.5.4",
     "firebase": "^5.0.4",
     "hammerjs": "2.0.8",
+    "js-beautify": "^1.7.5",
     "ngx-highlightjs": "^2.1.1",
     "rxjs": "^6.2.0",
     "rxjs-compat": "^6.2.0",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "6.0.2",
     "@angular-devkit/build-angular": "~0.6.3",
-    "typescript": "~2.7.2",
     "@angular/cli": "~6.0.3",
+    "@angular/compiler-cli": "6.0.2",
     "@angular/language-service": "6.0.2",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
+    "@types/js-beautify": "0.0.31",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
@@ -54,6 +55,7 @@
     "karma-jasmine-html-reporter": "0.2.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
   }
 }
